[package]
name = "lnaddress_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.19"
reqwest = {version="0.11.18", features=["json"]}
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.103"
tokio = {version="1.29.1", features=["full"]}
warp = "0.3.5"
